hardlink: use PRCE2 posix header file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1412,11 +1412,13 @@ UL_REQUIRES_HAVE([setpriv], [linux_capability_h], [linux/capability.h header fil
 UL_REQUIRES_HAVE([setpriv], [cap_ng], [libcap-ng library])
 AM_CONDITIONAL([BUILD_SETPRIV], [test "x$build_setpriv" = xyes])
 
-PKG_CHECK_MODULES([PCRE], [libpcre2-8], [have_pcre=yes], [have_pcre=no])
-AS_IF([test "x$have_pcre" = xyes ], [
-    AC_DEFINE([HAVE_PCRE], [1], [Define if libpcre2 is available])
+PKG_CHECK_MODULES([PCRE2_POSIX], [libpcre2-posix],
+		  [have_pcre2_posix=yes],
+		  [have_pcre2_posix=no])
+AS_IF([test "x$have_pcre2_posix" = xyes ], [
+    AC_DEFINE([HAVE_PCRE2_POSIX], [1], [Define if libpcre2-posix is available])
 ])
-AM_CONDITIONAL([HAVE_PCRE], [test "x$have_pcre" = xyes])
+AM_CONDITIONAL([HAVE_PCRE2_POSIX], [test "x$have_pcre2_posix" = xyes])
 
 AC_ARG_ENABLE([hardlink],
   AS_HELP_STRING([--disable-hardlink], [do not build hardlink]),
@@ -1424,6 +1426,7 @@ AC_ARG_ENABLE([hardlink],
 )
 UL_BUILD_INIT([hardlink])
 AM_CONDITIONAL([BUILD_HARDLINK], [test "x$build_hardlink" = xyes])
+
 
 AC_ARG_ENABLE([eject],
   AS_HELP_STRING([--disable-eject], [do not build eject]),
