--- a/misc-utils/Makemodule.am
+++ b/misc-utils/Makemodule.am
@@ -225,9 +225,9 @@ usrbin_exec_PROGRAMS += hardlink
 hardlink_SOURCES = misc-utils/hardlink.c
 hardlink_LDADD = $(LDADD) libcommon.la
 hardlink_CFLAGS = $(AM_CFLAGS)
-if HAVE_PCRE
-hardlink_LDADD += $(PCRE_LIBS)
-hardlink_CFLAGS += $(PCRE_CFLAGS)
+if HAVE_PCRE2_POSIX
+hardlink_LDADD += $(PCRE2_POSIX_LIBS)
+hardlink_CFLAGS += $(PCRE2_POSIX_CFLAGS)
 endif
 dist_man_MANS += misc-utils/hardlink.1
 endif
